# DjangoChatRoom

./: .env.example  .gitignore  pyproject.toml  requirements.txt
nginx/: default.conf
src/apps/auth/: admin.py  apps.py  signals.py  urls.py
src/apps/auth/migrations/: 0001_initial.py
src/apps/auth/models/: user.py
src/apps/auth/serializers/: __init__.py
src/apps/auth/views/: __init__.py  profile.py
src/apps/chat/: admin.py  apps.py  consumers.py  forms.py  routing.py  urls.py  views.py
src/apps/chat/migrations/: 0001_initial.py  0002_alter_message_chat.py  0003_alter_message_options_alter_message_chat.py  0004_alter_message_chat.py  0005_alter_message_content.py  0006_chat_users_online.py  0007_alter_chat_users_online.py
src/apps/chat/models/: __init__.py  chat.py  message.py
src/apps/chat/templates/chat/: chat.html  message.html
src/apps/chat/templates/chat/partials/: message.html  online_count.html
src/config/: asgi.py  urls.py
src/config/settings/: base.py
src/settings/: dev.py
src/utils/functions/: models.py
